--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
+    "react-native-web-webview": "^1.0.2",
     "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "react-native-youtube-iframe": "^2.4.1"
